2004-05-04  Tom Copeland <tom@infoether.com>

	* www/my/index.php: Fixed bug #788: Site admin's 'my page' shows 
	news postings from deleted projects

2004-04-16  Christian Bayle <bayle@debian.org>

	* Added DirectoryIndex in etc/httpd.d/40virtualhost
	* Take in account sys_session_expire when setting cookie 
	* Default page only requires a simple copy now and is used in debian

2004-04-21  Tom Copeland <tom@infoether.com>

	* common/docman/DocumentManager.class: Applied patch [ #774 ] Ordering 
	documents (inside GROUP) - proposal
	* www/include/project_home.php: Fixed a little plural/singular problem - i.e.,
	"x messages in 1 forums" becomes "x messages in 1 forum".
	* www/stats/site_stats_utils.php: Fixed "Statistics for the past x days." msg.

2004-04-19  Tim Perdue  <tim@perdue.net>

	* added default_page.php to cvs-cron jobs - creates a slick generic 
	page for each project.

2004-04-16  Christian Bayle <bayle@debian.org>
	* Test if Theme.class is really there, keep the default of local.inc if
	not in  User.class
	* Remove test about the presence of /etc/gforge/custom/pre.php in
	pre.php. Customized pre.php can be loaded by adding a path in apache
	* Manage a sys_custom_path for gforge customization
	* Added group param to tab hoook
	* Added site_admin_option_hook to add new features in admin page
	* Added group param to hooks in www/project/admin/editgroupinfo.php
	closes patch 772 from Kikov

2004-04-15  Christian Bayle <bayle@debian.org>

	* Reordered country code by country name and not by country code 
	(closes bug #762)
	* Replace squal_pre.php with pre.php in ./www/frs/download.php
	./www/snippet/download.php ./www/tracker/download.php
	* utils/fill-in-the-blanks.pl can use more than one conf file

2004-04-14  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed a bug in new cronjob cvs.php. Modes must be in octal.

2004-04-13  Tom Copeland <tom@infoether.com>
	
	* www/admin/userlist.php: Added sorting by user_name and add_date.
